// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should match snapshot that is not to have DataPrefetch mounted, when isDataPrefechEnabled is false 1`] = `
<div
  aria-labelledby="sidebar-left"
  className="sidebar--left"
  id="sidebar-left"
  key="sidebar-left"
  role="navigation"
>
  <Connect(SidebarHeader) />
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <div
    aria-label="channel sidebar region"
    className="sidebar--left__list a11y__region"
    data-a11y-sort-order="6"
    id="lhsList"
    role="application"
    tabIndex="-1"
  >
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-top"
      name="Top"
      onClick={[Function]}
      show={false}
    />
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-bottom"
      name="Bottom"
      onClick={[Function]}
      show={false}
    />
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={true}
      autoHideDuration={500}
      autoHideTimeout={500}
      hideTracksWhenNotNeeded={false}
      onScroll={[Function]}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "position": "absolute",
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        className="nav-pills__container"
        id="sidebarChannelContainer"
      >
        <ul
          aria-label="public channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="publicChannelList"
          key="public"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="publicChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PUBLIC CHANNELS"
                sectionType="public"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="public"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={true}
            channelId="c1"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c1"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c2"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c2"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="public"
          />
        </ul>
        <ul
          aria-label="private channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="privateChannelList"
          key="private"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="privateChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PRIVATE CHANNELS"
                sectionType="private"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="private"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c3"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c3"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c4"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c4"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="private"
          />
        </ul>
        <ul
          aria-label="direct messages"
          className="nav nav-pills nav-stacked a11y__section"
          id="directChannelList"
          key="direct"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="directChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="DIRECT MESSAGES"
                sectionType="direct"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="direct"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c5"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c5"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c6"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c6"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="direct"
          />
        </ul>
      </div>
    </Scrollbars>
  </div>
  <div
    className="sidebar__switcher"
  >
    <button
      className="btn btn-link"
      id="sidebarSwitcherButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Switch Channels"
        id="channel_switch_modal.title"
      />
      <span
        className="switch__shortcut hidden-xs"
      >
        <FormattedMessage
          defaultMessage="- CTRL+K"
          id="quick_switch_modal.channelsShortcut.windows"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should match snapshot, on sidebar not show the channel switcher 1`] = `
<div
  aria-labelledby="sidebar-left"
  className="sidebar--left"
  id="sidebar-left"
  key="sidebar-left"
  role="navigation"
>
  <Connect(DataPrefetch) />
  <Connect(SidebarHeader) />
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <div
    aria-label="channel sidebar region"
    className="sidebar--left__list a11y__region"
    data-a11y-sort-order="6"
    id="lhsList"
    role="application"
    tabIndex="-1"
  >
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-top"
      name="Top"
      onClick={[Function]}
      show={false}
    />
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-bottom"
      name="Bottom"
      onClick={[Function]}
      show={false}
    />
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={true}
      autoHideDuration={500}
      autoHideTimeout={500}
      hideTracksWhenNotNeeded={false}
      onScroll={[Function]}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "position": "absolute",
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        className="nav-pills__container"
        id="sidebarChannelContainer"
      >
        <ul
          aria-label="public channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="publicChannelList"
          key="public"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="publicChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PUBLIC CHANNELS"
                sectionType="public"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="public"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={true}
            channelId="c1"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c1"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c2"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c2"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="public"
          />
        </ul>
        <ul
          aria-label="private channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="privateChannelList"
          key="private"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="privateChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PRIVATE CHANNELS"
                sectionType="private"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="private"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c3"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c3"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c4"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c4"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="private"
          />
        </ul>
        <ul
          aria-label="direct messages"
          className="nav nav-pills nav-stacked a11y__section"
          id="directChannelList"
          key="direct"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="directChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="DIRECT MESSAGES"
                sectionType="direct"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="direct"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c5"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c5"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c6"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c6"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="direct"
          />
        </ul>
      </div>
    </Scrollbars>
  </div>
  <div
    className="sidebar__switcher"
  >
    <button
      className="btn btn-link"
      id="sidebarSwitcherButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Switch Channels"
        id="channel_switch_modal.title"
      />
      <span
        className="switch__shortcut hidden-xs"
      >
        <FormattedMessage
          defaultMessage="- CTRL+K"
          id="quick_switch_modal.channelsShortcut.windows"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should match snapshot, on sidebar show 1`] = `
<div
  aria-labelledby="sidebar-left"
  className="sidebar--left"
  id="sidebar-left"
  key="sidebar-left"
  role="navigation"
>
  <Connect(DataPrefetch) />
  <Connect(SidebarHeader) />
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <div
    aria-label="channel sidebar region"
    className="sidebar--left__list a11y__region"
    data-a11y-sort-order="6"
    id="lhsList"
    role="application"
    tabIndex="-1"
  >
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-top"
      name="Top"
      onClick={[Function]}
      show={false}
    />
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-bottom"
      name="Bottom"
      onClick={[Function]}
      show={false}
    />
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={true}
      autoHideDuration={500}
      autoHideTimeout={500}
      hideTracksWhenNotNeeded={false}
      onScroll={[Function]}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "position": "absolute",
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        className="nav-pills__container"
        id="sidebarChannelContainer"
      >
        <ul
          aria-label="public channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="publicChannelList"
          key="public"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="publicChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PUBLIC CHANNELS"
                sectionType="public"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="public"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={true}
            channelId="c1"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c1"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c2"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c2"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="public"
          />
        </ul>
        <ul
          aria-label="private channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="privateChannelList"
          key="private"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="privateChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PRIVATE CHANNELS"
                sectionType="private"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="private"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c3"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c3"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c4"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c4"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="private"
          />
        </ul>
        <ul
          aria-label="direct messages"
          className="nav nav-pills nav-stacked a11y__section"
          id="directChannelList"
          key="direct"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="directChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="DIRECT MESSAGES"
                sectionType="direct"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="direct"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c5"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c5"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c6"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c6"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="direct"
          />
        </ul>
      </div>
    </Scrollbars>
  </div>
  <div
    className="sidebar__switcher"
  >
    <button
      className="btn btn-link"
      id="sidebarSwitcherButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Switch Channels"
        id="channel_switch_modal.title"
      />
      <span
        className="switch__shortcut hidden-xs"
      >
        <FormattedMessage
          defaultMessage="- CTRL+K"
          id="quick_switch_modal.channelsShortcut.windows"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should match snapshot, on sidebar show with favorites 1`] = `
<div
  aria-labelledby="sidebar-left"
  className="sidebar--left"
  id="sidebar-left"
  key="sidebar-left"
  role="navigation"
>
  <Connect(DataPrefetch) />
  <Connect(SidebarHeader) />
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <div
    aria-label="channel sidebar region"
    className="sidebar--left__list a11y__region"
    data-a11y-sort-order="6"
    id="lhsList"
    role="application"
    tabIndex="-1"
  >
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-top"
      name="Top"
      onClick={[Function]}
      show={false}
    />
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-bottom"
      name="Bottom"
      onClick={[Function]}
      show={false}
    />
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={true}
      autoHideDuration={500}
      autoHideTimeout={500}
      hideTracksWhenNotNeeded={false}
      onScroll={[Function]}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "position": "absolute",
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        className="nav-pills__container"
        id="sidebarChannelContainer"
      >
        <ul
          aria-label="public channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="publicChannelList"
          key="public"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="publicChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PUBLIC CHANNELS"
                sectionType="public"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="public"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={true}
            channelId="c1"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c1"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c2"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c2"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="public"
          />
        </ul>
        <ul
          aria-label="private channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="privateChannelList"
          key="private"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="privateChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PRIVATE CHANNELS"
                sectionType="private"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="private"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c3"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c3"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c4"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c4"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="private"
          />
        </ul>
        <ul
          aria-label="direct messages"
          className="nav nav-pills nav-stacked a11y__section"
          id="directChannelList"
          key="direct"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="directChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="DIRECT MESSAGES"
                sectionType="direct"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="direct"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c5"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c5"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c6"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c6"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="direct"
          />
        </ul>
      </div>
    </Scrollbars>
  </div>
  <div
    className="sidebar__switcher"
  >
    <button
      className="btn btn-link"
      id="sidebarSwitcherButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Switch Channels"
        id="channel_switch_modal.title"
      />
      <span
        className="switch__shortcut hidden-xs"
      >
        <FormattedMessage
          defaultMessage="- CTRL+K"
          id="quick_switch_modal.channelsShortcut.windows"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should match snapshot, on sidebar show with unreads 1`] = `
<div
  aria-labelledby="sidebar-left"
  className="sidebar--left"
  id="sidebar-left"
  key="sidebar-left"
  role="navigation"
>
  <Connect(DataPrefetch) />
  <Connect(SidebarHeader) />
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <div
    aria-label="channel sidebar region"
    className="sidebar--left__list a11y__region"
    data-a11y-sort-order="6"
    id="lhsList"
    role="application"
    tabIndex="-1"
  >
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-top"
      name="Top"
      onClick={[Function]}
      show={false}
    />
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-bottom"
      name="Bottom"
      onClick={[Function]}
      show={false}
    />
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={true}
      autoHideDuration={500}
      autoHideTimeout={500}
      hideTracksWhenNotNeeded={false}
      onScroll={[Function]}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "position": "absolute",
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        className="nav-pills__container"
        id="sidebarChannelContainer"
      >
        <ul
          aria-label="public channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="publicChannelList"
          key="public"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="publicChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PUBLIC CHANNELS"
                sectionType="public"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="public"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={true}
            channelId="c1"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c1"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c2"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c2"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="public"
          />
        </ul>
        <ul
          aria-label="private channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="privateChannelList"
          key="private"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="privateChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PRIVATE CHANNELS"
                sectionType="private"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="private"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c3"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c3"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c4"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c4"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="private"
          />
        </ul>
        <ul
          aria-label="direct messages"
          className="nav nav-pills nav-stacked a11y__section"
          id="directChannelList"
          key="direct"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="directChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="DIRECT MESSAGES"
                sectionType="direct"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="direct"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c5"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c5"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c6"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c6"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="direct"
          />
        </ul>
      </div>
    </Scrollbars>
  </div>
  <div
    className="sidebar__switcher"
  >
    <button
      className="btn btn-link"
      id="sidebarSwitcherButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Switch Channels"
        id="channel_switch_modal.title"
      />
      <span
        className="switch__shortcut hidden-xs"
      >
        <FormattedMessage
          defaultMessage="- CTRL+K"
          id="quick_switch_modal.channelsShortcut.windows"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should match snapshot, when render as an empty div because no have a team or a user 1`] = `<div />`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should match snapshot, when render as an empty div because no have a team or a user 2`] = `<div />`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should show/hide correctly more direct channels modal 1`] = `
<div
  aria-labelledby="sidebar-left"
  className="sidebar--left"
  id="sidebar-left"
  key="sidebar-left"
  role="navigation"
>
  <Connect(DataPrefetch) />
  <Connect(MoreDirectChannels)
    isExistingChannel={false}
    onModalDismissed={[Function]}
  />
  <Connect(SidebarHeader) />
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <div
    aria-label="channel sidebar region"
    className="sidebar--left__list a11y__region"
    data-a11y-sort-order="6"
    id="lhsList"
    role="application"
    tabIndex="-1"
  >
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-top"
      name="Top"
      onClick={[Function]}
      show={false}
    />
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-bottom"
      name="Bottom"
      onClick={[Function]}
      show={false}
    />
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={true}
      autoHideDuration={500}
      autoHideTimeout={500}
      hideTracksWhenNotNeeded={false}
      onScroll={[Function]}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "position": "absolute",
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        className="nav-pills__container"
        id="sidebarChannelContainer"
      >
        <ul
          aria-label="public channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="publicChannelList"
          key="public"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="publicChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PUBLIC CHANNELS"
                sectionType="public"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="public"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={true}
            channelId="c1"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c1"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c2"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c2"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="public"
          />
        </ul>
        <ul
          aria-label="private channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="privateChannelList"
          key="private"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="privateChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PRIVATE CHANNELS"
                sectionType="private"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="private"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c3"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c3"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c4"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c4"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="private"
          />
        </ul>
        <ul
          aria-label="direct messages"
          className="nav nav-pills nav-stacked a11y__section"
          id="directChannelList"
          key="direct"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="directChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="DIRECT MESSAGES"
                sectionType="direct"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="direct"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c5"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c5"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c6"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c6"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="direct"
          />
        </ul>
      </div>
    </Scrollbars>
  </div>
  <div
    className="sidebar__switcher"
  >
    <button
      className="btn btn-link"
      id="sidebarSwitcherButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Switch Channels"
        id="channel_switch_modal.title"
      />
      <span
        className="switch__shortcut hidden-xs"
      >
        <FormattedMessage
          defaultMessage="- CTRL+K"
          id="quick_switch_modal.channelsShortcut.windows"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`component/legacy_sidebar/sidebar_channel/SidebarChannel should show/hide correctly more direct channels modal 2`] = `
<div
  aria-labelledby="sidebar-left"
  className="sidebar--left"
  id="sidebar-left"
  key="sidebar-left"
  role="navigation"
>
  <Connect(DataPrefetch) />
  <Connect(SidebarHeader) />
  <div
    className="sidebar--left__icons"
  >
    <Connect(Pluggable)
      pluggableName="LeftSidebarHeader"
    />
  </div>
  <div
    aria-label="channel sidebar region"
    className="sidebar--left__list a11y__region"
    data-a11y-sort-order="6"
    id="lhsList"
    role="application"
    tabIndex="-1"
  >
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-top"
      name="Top"
      onClick={[Function]}
      show={false}
    />
    <UnreadChannelIndicator
      content={
        <FormattedMessage
          defaultMessage="More unreads"
          id="sidebar.unreads"
        />
      }
      extraClass="nav-pills__unread-indicator-bottom"
      name="Bottom"
      onClick={[Function]}
      show={false}
    />
    <Scrollbars
      autoHeight={false}
      autoHeightMax={200}
      autoHeightMin={0}
      autoHide={true}
      autoHideDuration={500}
      autoHideTimeout={500}
      hideTracksWhenNotNeeded={false}
      onScroll={[Function]}
      renderThumbHorizontal={[Function]}
      renderThumbVertical={[Function]}
      renderTrackHorizontal={[Function]}
      renderTrackVertical={[Function]}
      renderView={[Function]}
      style={
        Object {
          "position": "absolute",
        }
      }
      tagName="div"
      thumbMinSize={30}
      universal={false}
    >
      <div
        className="nav-pills__container"
        id="sidebarChannelContainer"
      >
        <ul
          aria-label="public channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="publicChannelList"
          key="public"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="publicChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PUBLIC CHANNELS"
                sectionType="public"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="public"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={true}
            channelId="c1"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c1"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c2"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c2"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="public"
          />
        </ul>
        <ul
          aria-label="private channels"
          className="nav nav-pills nav-stacked a11y__section"
          id="privateChannelList"
          key="private"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="privateChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="PRIVATE CHANNELS"
                sectionType="private"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="private"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c3"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c3"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c4"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c4"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="private"
          />
        </ul>
        <ul
          aria-label="direct messages"
          className="nav nav-pills nav-stacked a11y__section"
          id="directChannelList"
          key="direct"
          tabIndex="-1"
        >
          <li
            className="sidebar-section__header"
          >
            <h4
              id="directChannel"
              role="presentation"
            >
              <ChannelName
                browsePublicDirectChannels={[Function]}
                channelName="DIRECT MESSAGES"
                sectionType="direct"
              />
            </h4>
            <ChannelCreate
              canCreatePrivateChannel={true}
              canCreatePublicChannel={true}
              createDirectMessage={[Function]}
              createPrivateChannel={[Function]}
              createPublicChannel={[Function]}
              createPublicDirectChannel={[Function]}
              sectionType="direct"
            />
          </li>
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c5"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c5"
          />
          <Connect(injectIntl(SidebarChannel))
            active={false}
            channelId="c6"
            currentTeamName="test-team"
            currentUserId="my-user-id"
            key="c6"
          />
          <injectIntl(ChannelMore)
            browsePublicDirectChannels={[Function]}
            currentTeamId="team_id"
            moreChannels={[Function]}
            moreDirectMessages={[Function]}
            sectionType="direct"
          />
        </ul>
      </div>
    </Scrollbars>
  </div>
  <div
    className="sidebar__switcher"
  >
    <button
      className="btn btn-link"
      id="sidebarSwitcherButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Switch Channels"
        id="channel_switch_modal.title"
      />
      <span
        className="switch__shortcut hidden-xs"
      >
        <FormattedMessage
          defaultMessage="- CTRL+K"
          id="quick_switch_modal.channelsShortcut.windows"
        />
      </span>
    </button>
  </div>
</div>
`;
